[gd_scene load_steps=6 format=3 uid="uid://cgdsuskoj408f"]

[ext_resource type="Script" path="res://scripts/interface/store/store.gd" id="1_pv4cb"]
[ext_resource type="Texture2D" uid="uid://dujbp71q26pgc" path="res://assets/interface/store/store_background.png" id="1_yaagc"]
[ext_resource type="Texture2D" uid="uid://bv1y2ps3ar3xn" path="res://assets/interface/common/close_button_0.png" id="2_ykwcx"]
[ext_resource type="Texture2D" uid="uid://dajrp5tujblkg" path="res://assets/interface/common/close_button_1.png" id="3_nxejt"]
[ext_resource type="Texture2D" uid="uid://brfg4bgiicas4" path="res://assets/interface/common/close_button_2.png" id="4_avaef"]

[node name="StoreMain" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -339.5
offset_top = -221.0
offset_right = 339.5
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pv4cb")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -339.5
offset_top = -221.0
offset_right = 339.5
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yaagc")

[node name="DragButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -183.5
offset_right = 193.0
offset_bottom = 183.5
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 41.0
offset_right = -24.0
offset_bottom = 63.0
grow_horizontal = 0
texture_normal = ExtResource("2_ykwcx")
texture_pressed = ExtResource("3_nxejt")
texture_hover = ExtResource("4_avaef")

[connection signal="button_down" from="Background/DragButton" to="." method="_on_drag_button_button_down"]
[connection signal="button_up" from="Background/DragButton" to="." method="_on_drag_button_button_up"]
[connection signal="pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]
